--- a/app/views/layouts/delayed_jobs.html.haml
+++ b/app/views/layouts/delayed_jobs.html.haml
@@ -1,6 +1,6 @@
 !!!
 %head
-  %title MY APP
+  %title Delayed Job Dashboard
   = javascript_include_tag "application"
   = stylesheet_link_tag "delayed_job_dashboard","application"
 %body
