--- a/app/views/delayed_jobs/show.html.haml
+++ b/app/views/delayed_jobs/show.html.haml
@@ -7,6 +7,9 @@
     %th Name
     %td= @job.name
   %tr
+    %th Priority
+    %td= @job.priority
+  %tr
     %th Attempts
     %td= @job.attempts
   %tr
