--- a/app/views/layouts/delayed_jobs.html.haml
+++ b/app/views/layouts/delayed_jobs.html.haml
@@ -1,7 +1,7 @@
 !!!
 %head
   %title Delayed Job Dashboard
-  = javascript_include_tag "application"
-  = stylesheet_link_tag "delayed_job_dashboard","application"
+  = javascript_include_tag "delayed_job_dashboard"
+  = stylesheet_link_tag "delayed_job_dashboard"
 %body
   = yield
